--- a/config/database.yml
+++ b/config/database.yml
@@ -77,12 +77,8 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
-# production:
-#   <<: *default
-#   database: amfissa_parcels_production
-#   username: amfissa_parcels
-#   password: <%= ENV["AMFISSA_PARCELS_DATABASE_PASSWORD"] %>
-
 production:
-<<: *default
-url: <%= ENV["DATABASE_URL"] %>
+  <<: *default
+  database: amfissa_parcels_production
+  username: amfissa_parcels
+  password: <%= ENV["AMFISSA_PARCELS_DATABASE_PASSWORD"] %>
